// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab when color is {"component": [Object], "title": "Light"} should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-9"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      className="natds-icons natds-icons-outlined-action-add makeStyles-root-12"
    />
  </span>
</button>
`;

exports[`Fab when color is {"component": [Object], "title": "Primary"} should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-1 MuiFab-primary makeStyles-primary-2"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      className="natds-icons natds-icons-outlined-action-add makeStyles-root-4"
    />
  </span>
</button>
`;

exports[`Fab when color is {"component": [Object], "title": "Secondary"} should render correctly 1`] = `
<button
  className="MuiButtonBase-root MuiFab-root makeStyles-root-5 MuiFab-secondary makeStyles-secondary-7"
  disabled={false}
  onBlur={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiFab-label"
  >
    <i
      className="natds-icons natds-icons-outlined-action-add makeStyles-root-8"
    />
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;
